# PythonStarter

./: .gitignore  PythonStarter.slnx  app_host.cs  apphost.cs
.aspire/: settings.json
PythonStarter.AppHost/: AppHost.cs  PythonStarter.AppHost.csproj
PythonStarter.AppHost/Properties/: launchSettings.json
api_service/: app.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
react-vite-app/: README.md  package-lock.json
